<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HackerNewsListActivity">

    <fragment android:layout_width="match_parent"
              android:id="@+id/home_fragment"
              android:layout_height="match_parent"
              class="com.mr.myapplication.ui.home.HomeNewsListFragment"/>

</androidx.constraintlayout.widget.ConstraintLayout>